# Fractal-Neurons-LILA_JAILBREAK

./: .gitignore  AGENTS.md  DATA_GENERATOR.md  NEXT_STEPS.md  README.md  add_special_tokens.py  ai_psychosis_is_a_myth.md  chaos_licensing_2077.txt  evo.py  evo.yaml  fix_tokenizer_decoder.py  generate_conversations.py  generate_ollama_conversations.py  letter_to_future_self.md  lonely.md  manifesto.md  menu.py  mix_datasets.py  project.md  pyproject.toml  run_fsi_loop.sh  run_fsi_pipeline.sh  sad.md  test.yaml  train1  whitepaper.md  wiki.py  y
configs/: conversational_v1.yaml  english_hf.yaml  fast_7950x_4090.yaml  finetune_chat.yaml  fsi_distill_v1.yaml  fsi_en_v1.yaml  mixed_corpus_v1.yaml  preset_4090_20gb_hf.yaml  preset_7950x_4090.yaml  system_train.yaml
docs/: conversational_tutorial.md
fractal_neurons/: __init__.py  agent.py  agents.py  autotune.py  build_tokenizer.py  data.py  data_hf.py  data_text.py  distill.py  download_english.py  eval_harness.py  evo.py  finetune_english.py  fmm.py  generate.py  infer.py  model.py  orchestrator.py  progress.py  tokenizer.py  train.py
fractal_neurons/utils/: ema.py
prompts/: seed_prompts.txt
scripts/: fractalctl.py
tests/: test_download_extract.py  test_finetune_config.py  test_generate.py  test_infer_loader.py  test_model.py  test_moe.py  test_orchestrator.py  test_training_step.py
tools/: make_chat_sft.py  robust_lila_eval.py
